2003-03-12  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/pdb.cpp (WritePDB): Make sure that atom type definitions are
	written correctly as per the PDB standard. Fixes PR#701620, as
	suggested by Christian Hofbauer.

2003-03-11  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/generic.h, src/generic.cpp: Add new OBUnitCell generic data
	type for storing and converting unit cell parameters.

	* test/Makefile.in, test/main.cpp, test/unitcell.cpp,
	test/unitcell.txt: New test to confirm that unit cell conversions
	occur accurately.

	* src/atom.cpp (GetAtomicMass): If an isotope has been set, use
	that as the atomic mass. Otherwise stick to the normal average
	mass.

	* src/isotope-small.txt, src/Makefile.in, src/isotope.h: Smaller
	set of isotopes for generating default data to minimize growth in
	executable size.

2003-03-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/generic.h: Add new data type "slots" to obDataType enum.

	* src/pdb.cc (class OBSerialNums): Use new obSerialNums enum,
	rather than overriding user-defined obData# slots. These should
	only be used by user-level code, not by Open Babel internal code.

2003-03-10  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/atom.cpp (GetType): Fix compilation error when copying in
	"D" atom type for a deuterium atom.

	* src/mol2.cpp (ReadMol2): Read residue information if available,
	along with atom IDs and residue number. Should address feature
	request PR#697614 submitted by Claudio Cavasotto.

	* src/mol.h, src/mol.cpp: Add API support for a molecular total
	charge.
	
2003-03-06  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add support for the isotopes.txt -> .h
	conversion.

	* src/mol.h: Add support for storing atomic isotopes and
	"exact mass" methods.

	* src/mol.cpp (GetExactMass): New method, using isotope table.
	
	* src/atom.cpp: Add support for atomic isotopes, including